--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    tools:context="fricke.spencer.com.vartip.MainActivity">
-
-
+    tools:context="com.sjfricke.vartip.MainActivity">
 </RelativeLayout>
